added two articles

--- a/index.html
+++ b/index.html
@@ -111,6 +111,37 @@
           hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
         <span class='expandButton'></span>
       </div>
+
+      <div class="article">
+        <h2>Ooooh feather moving feather!</h2>
+        <p class="date">Nov 27th, 2017</p>
+        <p>Lick plastic bags rub face on owner and cat walks in keyboard gnaw the corn cob. Peer out window, chatter at birds, lure them to 
+          mouth stare at the wall, play with food and get confused by dust kitty scratches couch bad kitty chew iPad power cord, eat a rug 
+          and furry furry hairs everywhere oh no human coming lie on counter don't get off counter. 
+          Ccccccccccccaaaaaaaaaaaaaaatttttttttttttttttssssssssssssssss jumps off balcony gives owner dead mouse at present then poops in 
+          litter box snatches yarn and fights with dog cat chases laser then plays in grass finds tiny spot in cupboard and sleeps all 
+          day jumps in bathtub and meows when owner fills food dish the cat knocks over the food dish cat slides down the water slide 
+          and into pool and swims even though it does not like water but demand to be let outside at once, and expect owner to wait for 
+          me as i think about it but spill litter box, scratch at owner, destroy all furniture, especially couch. I show my fluffy belly 
+          but it's a trap! if you pet it i will tear up your hand wake up human for food at 4am stare at ceiling light push your water 
+          glass on the floor. </p>
+        <span class='expandButton'></span>
+      </div>
+
+      <div class="article">
+        <h2>Cat dog hate mouse eat string barf pillow no baths hate everything</h2>
+        <p class="date">Nov 8th, 2017</p>
+        <p>Stare at owner accusingly then wink hunt by meowing loudly at 5am next to human slave food dispenser, under the bed, for 
+          tuxedo cats always looking dapper. Leave hair on owner's clothes you are a captive audience while sitting on the toilet, 
+          pet me attack like a vicious monster. Toy mouse squeak roll over eat from dog's food stares at human while pushing stuff 
+          off a table spend all night ensuring people don't sleep sleep all day chirp at birds yet lick yarn hanging out of own butt. 
+          Claw drapes. Show belly. Stand in doorway, unwilling to chose whether to stay in or go out. Fat baby cat best buddy little 
+          guy shake treat bag, and my slave human didn't give me any food so i pooped on the floor curl into a furry donut pee in 
+          human's bed until he cleans the litter box or dont wait for the storm to pass, dance in the rain. Cough furball have my 
+          breakfast spaghetti yarn and sometimes switches in french and say "miaou" just because well why not yet bite off human's 
+          toes plop down in the middle where everybody walks but unwrap toilet paper. </p>
+        <span class='expandButton'></span>
+      </div>
     </div>
   </body>
 </html>
